wp-content/themes/solar-innovations/css/style.css
/* ... */
.slick-dots li button:before{font-family:'slick';font-size:40px;line-height:20px;position:absolute;top:0;left:0;width:20px;height:20px;content:'■';text-align:center;opacity:.25;color:#69951F;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}

.slick-dots li.slick-active button:before{opacity:1;color:#69951F}

ul.slick-dots {
	margin-left: 0;
}

.slick-track {
	margin-bottom: 40px!important;
}





html{overflow-x:hidden!important}

/*-- CUSTOM --*/

#ls-global > div.shiftnav-wrap.ls-overflow-visible{
	overflow-x: hidden!important;
}


#preview_container {
	display:none;
	width:300px;
	height:185px;
	overflow:hidden;
}

#preview_spinner {
	display:none;
	width:100%;
	margin-top:-25px;
}

.mask a img {
	max-height: 180px!important;
	height: 177px;
}

* {
	-webkit-font-smoothing:antialiased;
}
/* ... */

